# blairapps

./: .gitignore  Cargo.toml  README.md  app.json  cred.db  docker-compose.yml  login.html  package-lock.json  package.json  test.rs  testfile.rs
android/: settings.gradle
android/app/: BUCK  build.gradle
android/app/src/main/: AndroidManifest.xml
app/: Announcements.js  App.js  Calendar.js  ChallengeWeek.js  Clubs.js  Home.js  Images.js  Language.js  LunchEvents.js  More.js  Notifications.js  OpenPage.js  OpeningPage.js  Poll.js  Resources.js  SSLOps.js  Settings.js  SslOps.js  Staff.js  Student.js  StudentWeek.js  i18n.js
app/Languages/: en.js  es.js
app/resources/: fetchInfo.json
app/styles/: liststyles.js  morestyles.js
cms/: Cargo.toml  Dockerfile
cms/cms_macro/: Cargo.toml
cms/cms_macro/src/: lib.rs
cms/migrations/setup/: down.sql  up.sql
cms/src/: auth.rs  main.rs  secret.rs  utils.rs
cms/src/data/: mod.rs  models.rs  schema.rs
cms/src/data/events/: mod.rs
cms/static/: utils.js
cms/templates/: announcements.html.hbs  challenge.html.hbs  clubs.html.hbs  events.html.hbs  home.html.hbs  important.html.hbs  login.html.hbs  lunch_events.html.hbs  new.html.hbs  polls.html.hbs  ssl_ops.html.hbs  student.html.hbs  teachers.html.hbs
ios/: Podfile
ios/blazerapp/: AppDelegate.m  Info.plist  LaunchScreen.storyboard
ios/blazerapp.xcodeproj/: project.pbxproj
ios/blazerapp.xcodeproj/xcshareddata/xcschemes/: blazerapp-tvOS.xcscheme  blazerapp.xcscheme
ios/blazerapp.xcworkspace/: contents.xcworkspacedata
ios/blazerappTests/: blazerappTests.m
(+4 files in other folders)
