[package]
name = "cms"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
dotenv = "0.15.0"
oauth2 = { version = "4.1.0", default-features = false }
clap = "2.33.3"
ansi_term = "0.12.1"
chrono = "0.4.19"
diesel = { version = "1.4.4", features = ["postgres", "extras"] }

