[package]
name = "cms"
version = "0.1.0"
edition = "2018"

[dependencies]
rocket = "0.4.10"
dotenv = "0.15.0"
clap = "2.33.3"
ansi_term = "0.12.1"
chrono = "0.4.19"
diesel_migrations = "1.4.0"
url = "2.2.2"
oauth2 = "4.1.0"
serde_json = "1.0.66"
base64 = "0.13.0"
quote = "1.0.9"

[dependencies.reqwest]
version = "0.11.4"
features = ["blocking", "json"]

[dependencies.diesel]
version = "1.4.4"
features = ["postgres", "extras"]

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["handlebars_templates", "diesel_postgres_pool", "json"]

[dependencies.serde]
version = "1.0.126"
features = ["derive"]

[dependencies.rand]
version = "0.8.4"
features = ["getrandom"]

[dependencies.cms_macro]
path = "cms_macro"
