[package]
name = "cms_macro"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro=true

[dependencies]
quote = "1.0.9"
proc-macro2 = "1.0.28"

[dependencies.diesel]
version = "1.4.4"
features = ["postgres", "extras"]
